--- a/views/index.hbs
+++ b/views/index.hbs
@@ -17,7 +17,7 @@
       crossorigin="anonymous"
     ></script>
   </head>
-  <body background="/images/weather.png" background-re>
+  <body background="/images/weather.png">
     <div>
       <nav class="navbar navbar-dark bg-primary">
         <div class="container-fluid">
